# PyThrust

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  docs.yml
api_reference/: index.html
battery_model/: index.html
data/batteries/: example_liion_cell.json
data/motors/: 4-Max_PPB-2826-1200.json  4-Max_PPB-2826-1400.json  4-Max_PPB-2831-1000.json  4-Max_PPB-2831-1900.json  4-Max_PPB-2834-1000.json  4-Max_PPB-2834-1300.json  4-Max_PPH-300-3500.json  4-Max_PPH-400-3200.json  4-Max_PPH-400-3500.json  4-Max_PPH-400-3800.json  4-Max_PPH-500-3500.json  4-Max_PPH-600-1600.json  4-Max_PPI-1230-3850.json  4-Max_PPI-1230-4100.json  4-Max_PPI-1230-4990.json  4-Max_PPI-1232-5200.json  (+7864 more)
databases/: index.html
development/: index.html
docs/: api_reference.md  battery_model.md  databases.md  development.md  examples.md  getting_started.md  index.md  motor_calibration.md  usage.md
examples/: calibrate_from_datasheet.py  calibrate_system_resistance.py  index.html  openmdao_hover_optimization.py  optimize_and_plot_propulsion.py  rate_map_battery_mission.py  rate_map_battery_point_states.py  select_motor.py  select_motor_from_database.py  simulate_pybamm_mission.py
getting_started/: index.html
motor_calibration/: index.html
pythrust/: __init__.py
scripts/: generate_readme_plots.py
search/: search_index.json
stylesheets/: extra.css
tests/: test_autotune.py  test_battery.py  test_motors.py  test_openmdao.py  test_solver.py
theory/: index.html
usage/: index.html
(+894 files in other folders)
